# deep-learning-for-image-processing

./: .gitignore  test1.py
others_project/kmeans_anchors/: main.py  yolo_kmeans.py
pytorch_classification/Test5_resnet/: class_indices.json  class_indices.txt  export_torchscript.py  model.py  predict.py  test_resnet18_script copy.py  train_person.py
pytorch_classification/Test5_resnet/deploy/: CMakeLists.txt  resnet18 copy 2.cpp  resnet18 copy.cpp  resnet18.bak  resnet18.cpp
pytorch_classification/Test5_resnet/test_kprcnn_script/: torchscript_keypoint_rcnn-so.cpp  torchscript_keypoint_rcnn.cpp  torchscript_mask_rcnn.cpp
pytorch_keypoint/HRNet/: README.md  backup.py  cal_uper_downer.py  draw_utils.py  key_results.json  multi_predict.py  my_dataset_coco.py  person_keypoints.json  predict copy.py  predict.py  results20230717-104431.txt  results20230717-115304.txt  train.py  transforms.py
pytorch_keypoint/HRNet/model/: hrnet.py
pytorch_object_detection/mask_rcnn/: my_dataset_coco.py  train.py
pytorch_object_detection/retinaNet/: predict.py  train.py
pytorch_object_detection/train_coco_dataset/: train.py
pytorch_object_detection/yolov3_spp/: .env  calculate_dataset.py  coco_to_yolo_dataset.py  cooo2yolo.py  delet_image_data.py  export_onnx.py  gen_wts.py  labelme2coco-02.py  load_onnx_test.py  models.py  predict_hand_leg_d2kp.py  predict_multi.py  predict_single.py  predict_test.py  predict_test_video.py  train.py  trans_voc2yolo.py
pytorch_segmentation/u2net/: u2net.py
pytorch_segmentation/unet/: my_dataset.py  predict.py  train.py
(+28 files in other folders)
